# haskellscraper

./: .gitignore  LICENSE  woot.cabal
src/: Main.hs
