name:                woot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/levinotik/woot#readme
license:             BSD3
license-file:        LICENSE
author:              Levi Notik
maintainer:          levinotik@gmail.com
copyright:           BSD3
category:            web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable woot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , HandsomeSoup
                     , hxt
                     , split
                     , lens
                     , text
